--- a/after/src/App.css
+++ b/after/src/App.css
@@ -109,3 +109,19 @@ footer {
   text-align: center;
   padding: 10px;
 }
+
+.loader {
+  display: flex;
+  width: 100%;
+  text-align: center;
+}
+
+.loader img {
+  margin-right: 10px;
+}
+
+button:disabled {
+  background-color: #b1b0b0;
+  color: #333;
+  cursor:not-allowed;
+}
